kubernetes/resources/binobs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observers
  name: binobs-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      project: binance-observer
      app: binobs
  template:
    metadata:
      namespace: observers
      labels:
        project: binance-observer
        app: binobs
    spec:
      containers:
        - name: binobs-app
          image: docker.io/aquare11e/binobs:latest
          readinessProbe:
            initialDelaySeconds: 20
            exec:
              command:
                - rm
                - /tmp/ready
          livenessProbe:
            initialDelaySeconds: 20
            exec:
              command:
                - rm
                - /tmp/live
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "100m"
