kubernetes/resources/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observers
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: grafana-creds
          image: docker.io/grafana/grafana-oss:9.0.5
          name: grafana-container
          volumeMounts:
            - name: data-dir
              mountPath: /var/lib/grafana/
      securityContext:
        fsGroup: 472
      volumes:
        - name: data-dir
          persistentVolumeClaim:
            claimName: graf-data-dir-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana-svc
  namespace: observers
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
      targetPort: 3000
  selector:
    app: grafana
