kubernetes/resources/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: observers
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: influxdb-creds
            - configMapRef:
                name: influxdb-configmap
          image: docker.io/influxdb:2.3-alpine
          name: influxdb
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: var-lib-influxdb
      volumes:
        - name: var-lib-influxdb
          persistentVolumeClaim:
            claimName: influxdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-svc
  namespace: observers
  labels:
    app: influxdb
spec:
  type: ClusterIP
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086
  selector:
    app: influxdb
